@@ -1,9 +1,6 @@
 /*
- * Microsoft JDBC Driver for SQL Server
- * 
- * Copyright(c) Microsoft Corporation All rights reserved.
- * 
- * This program is made available under the terms of the MIT License. See the LICENSE file in the project root for more information.
+ * Microsoft JDBC Driver for SQL Server Copyright(c) Microsoft Corporation All rights reserved. This program is made
+ * available under the terms of the MIT License. See the LICENSE file in the project root for more information.
  */
 package com.microsoft.sqlserver.jdbc.connection;
 
@@ -18,6 +15,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.SQLFeatureNotSupportedException;
 import java.sql.Statement;
+import java.text.MessageFormat;
 import java.util.Properties;
 import java.util.UUID;
 import java.util.concurrent.Executor;
@@ -39,11 +37,12 @@ import com.microsoft.sqlserver.jdbc.SQLServerConnection;
 import com.microsoft.sqlserver.jdbc.SQLServerConnectionPoolDataSource;
 import com.microsoft.sqlserver.jdbc.SQLServerDataSource;
 import com.microsoft.sqlserver.jdbc.SQLServerDriver;
-import com.microsoft.sqlserver.jdbc.SQLServerException;
+import com.microsoft.sqlserver.jdbc.TestResource;
 import com.microsoft.sqlserver.testframework.AbstractTest;
 import com.microsoft.sqlserver.testframework.DBConnection;
 import com.microsoft.sqlserver.testframework.DBTable;
 import com.microsoft.sqlserver.testframework.util.RandomUtil;
+
 
 @RunWith(JUnitPlatform.class)
 public class ConnectionDriverTest extends AbstractTest {
@@ -56,10 +55,10 @@ public class ConnectionDriverTest extends AbstractTest {
     /**
      * test SSL properties
      * 
-     * @throws SQLServerException
+     * @throws SQLException
      */
     @Test
-    public void testConnectionDriver() throws SQLServerException {
+    public void testConnectionDriver() throws SQLException {
         SQLServerDriver d = new SQLServerDriver();
         Properties info = new Properties();
         StringBuffer url = new StringBuffer();
@@ -69,7 +68,7 @@ public class ConnectionDriverTest extends AbstractTest {
         for (DriverPropertyInfo anInfoArray1 : infoArray) {
             logger.fine(anInfoArray1.name);
             logger.fine(anInfoArray1.description);
-            logger.fine(new Boolean(anInfoArray1.required).toString());
+            logger.fine(Boolean.valueOf(anInfoArray1.required).toString());
             logger.fine(anInfoArray1.value);
         }
 
@@ -78,16 +77,16 @@ public class ConnectionDriverTest extends AbstractTest {
         infoArray = d.getPropertyInfo(url.toString(), info);
         for (DriverPropertyInfo anInfoArray : infoArray) {
             if (anInfoArray.name.equals("encrypt")) {
-                assertTrue(anInfoArray.value.equals("true"), "Values are different");
+                assertTrue(anInfoArray.value.equals("true"), TestResource.getResource("R_valuesAreDifferent"));
             }
             if (anInfoArray.name.equals("trustStore")) {
-                assertTrue(anInfoArray.value.equals("someStore"), "Values are different");
+                assertTrue(anInfoArray.value.equals("someStore"), TestResource.getResource("R_valuesAreDifferent"));
             }
             if (anInfoArray.name.equals("trustStorePassword")) {
-                assertTrue(anInfoArray.value.equals("somepassword"), "Values are different");
+                assertTrue(anInfoArray.value.equals("somepassword"), TestResource.getResource("R_valuesAreDifferent"));
             }
             if (anInfoArray.name.equals("hostNameInCertificate")) {
-                assertTrue(anInfoArray.value.equals("someHost"), "Values are different");
+                assertTrue(anInfoArray.value.equals("someHost"), TestResource.getResource("R_valuesAreDifferent"));
             }
         }
     }
@@ -110,9 +109,9 @@ public class ConnectionDriverTest extends AbstractTest {
         ds.setEncrypt(true);
         ds.setTrustStorePassword(trustStorePassword);
         ds.setTrustServerCertificate(true);
-        assertEquals(trustStore, ds.getTrustStore(), "Values are different");
-        assertEquals(true, ds.getEncrypt(), "Values are different");
-        assertEquals(true, ds.getTrustServerCertificate(), "Values are different");
+        assertEquals(trustStore, ds.getTrustStore(), TestResource.getResource("R_valuesAreDifferent"));
+        assertEquals(true, ds.getEncrypt(), TestResource.getResource("R_valuesAreDifferent"));
+        assertEquals(true, ds.getTrustServerCertificate(), TestResource.getResource("R_valuesAreDifferent"));
     }
 
     @Test
@@ -123,29 +122,30 @@ public class ConnectionDriverTest extends AbstractTest {
         ds.setEncrypt(true);
         ds.setTrustServerCertificate(true);
         ds.setPacketSize(8192);
-        try(Connection con = ds.getConnection()) {}
+        try (Connection con = ds.getConnection()) {}
     }
 
     @Test
     public void testJdbcDriverMethod() throws SQLFeatureNotSupportedException {
         SQLServerDriver serverDriver = new SQLServerDriver();
         Logger logger = serverDriver.getParentLogger();
-        assertEquals(logger.getName(), "com.microsoft.sqlserver.jdbc", "Parent Logger name is wrong");
+        assertEquals(logger.getName(), "com.microsoft.sqlserver.jdbc",
+                TestResource.getResource("R_parrentLoggerNameWrong"));
     }
 
     @Test
     public void testJdbcDataSourceMethod() throws SQLFeatureNotSupportedException {
         SQLServerDataSource fxds = new SQLServerDataSource();
         Logger logger = fxds.getParentLogger();
-        assertEquals(logger.getName(), "com.microsoft.sqlserver.jdbc", "Parent Logger name is wrong");
+        assertEquals(logger.getName(), "com.microsoft.sqlserver.jdbc",
+                TestResource.getResource("R_parrentLoggerNameWrong"));
     }
 
     class MyEventListener implements javax.sql.ConnectionEventListener {
         boolean connClosed = false;
         boolean errorOccurred = false;
 
-        public MyEventListener() {
-        }
+        public MyEventListener() {}
 
         public void connectionClosed(ConnectionEvent event) {
             connClosed = true;
@@ -157,13 +157,15 @@ public class ConnectionDriverTest extends AbstractTest {
     }
 
     /**
-     * Attach the Event listener and listen for connection events, fatal errors should not close the pooled connection objects
+     * Attach the Event listener and listen for connection events, fatal errors should not close the pooled connection
+     * objects
      * 
      * @throws SQLException
      */
     @Test
     public void testConnectionEvents() throws SQLException {
-        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)), "Skipping test case on Azure SQL.");
+        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)),
+                TestResource.getResource("R_skipAzure"));
 
         SQLServerConnectionPoolDataSource mds = new SQLServerConnectionPoolDataSource();
         mds.setURL(connectionString);
@@ -171,31 +173,31 @@ public class ConnectionDriverTest extends AbstractTest {
 
         // Attach the Event listener and listen for connection events.
         MyEventListener myE = new MyEventListener();
-        pooledConnection.addConnectionEventListener(myE);	// ConnectionListener implements ConnectionEventListener
-        
-        try(Connection con = pooledConnection.getConnection();
-        	Statement stmt = con.createStatement(ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE)) {
+        pooledConnection.addConnectionEventListener(myE); // ConnectionListener implements ConnectionEventListener
 
-	        boolean exceptionThrown = false;
-	        try {
-	            // raise a severe exception and make sure that the connection is not
-	            // closed.
-	            stmt.executeUpdate("RAISERROR ('foo', 20,1) WITH LOG");
-	        }
-	        catch (Exception e) {
-	            exceptionThrown = true;
-	        }
-	        assertTrue(exceptionThrown, "Expected exception is not thrown.");
-	
-	        // Check to see if error occurred.
-	        assertTrue(myE.errorOccurred, "Error occurred is not called.");
+        try (Connection con = pooledConnection.getConnection();
+                Statement stmt = con.createStatement(ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE)) {
+
+            boolean exceptionThrown = false;
+            try {
+                // raise a severe exception and make sure that the connection is not
+                // closed.
+                stmt.executeUpdate("RAISERROR ('foo', 20,1) WITH LOG");
+            } catch (Exception e) {
+                exceptionThrown = true;
+            }
+            assertTrue(exceptionThrown, TestResource.getResource("R_expectedExceptionNotThrown"));
+
+            // Check to see if error occurred.
+            assertTrue(myE.errorOccurred, TestResource.getResource("R_errorNotCalled"));
         }
         // make sure that connection is closed.
     }
 
     @Test
     public void testConnectionPoolGetTwice() throws SQLException {
-        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)), "Skipping test case on Azure SQL.");
+        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)),
+                TestResource.getResource("R_skipAzure"));
 
         SQLServerConnectionPoolDataSource mds = new SQLServerConnectionPoolDataSource();
         mds.setURL(connectionString);
@@ -203,25 +205,26 @@ public class ConnectionDriverTest extends AbstractTest {
 
         // Attach the Event listener and listen for connection events.
         MyEventListener myE = new MyEventListener();
-        pooledConnection.addConnectionEventListener(myE);	// ConnectionListener implements ConnectionEventListener
+        pooledConnection.addConnectionEventListener(myE); // ConnectionListener implements ConnectionEventListener
 
-    	Connection con = pooledConnection.getConnection();
-    	Statement stmt = con.createStatement(ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE);
+        Connection con = pooledConnection.getConnection();
+        Statement stmt = con.createStatement(ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE);
         // raise a non severe exception and make sure that the connection is not closed.
         stmt.executeUpdate("RAISERROR ('foo', 3,1) WITH LOG");
         // not a serious error there should not be any errors.
-        assertTrue(!myE.errorOccurred, "Error occurred is called.");
+        assertTrue(!myE.errorOccurred, TestResource.getResource("R_errorCalled"));
         // check to make sure that connection is not closed.
-	    assertTrue(!con.isClosed(), "Connection is closed.");
-	    stmt.close();
-	    con.close();
+        assertTrue(!con.isClosed(), TestResource.getResource("R_connectionIsClosed"));
+        stmt.close();
+        con.close();
         // check to make sure that connection is closed.
-        assertTrue(con.isClosed(), "Connection is not closed.");
+        assertTrue(con.isClosed(), TestResource.getResource("R_connectionIsNotClosed"));
     }
 
     @Test
     public void testConnectionClosed() throws SQLException {
-        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)), "Skipping test case on Azure SQL.");
+        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)),
+                TestResource.getResource("R_skipAzure"));
 
         SQLServerDataSource mds = new SQLServerDataSource();
         mds.setURL(connectionString);
@@ -231,38 +234,44 @@ public class ConnectionDriverTest extends AbstractTest {
         boolean exceptionThrown = false;
         try {
             stmt.executeUpdate("RAISERROR ('foo', 20,1) WITH LOG");
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             exceptionThrown = true;
         }
-        assertTrue(exceptionThrown, "Expected exception is not thrown.");
-        
+        assertTrue(exceptionThrown, TestResource.getResource("R_expectedExceptionNotThrown"));
+
         // check to make sure that connection is closed.
-        assertTrue(con.isClosed(), "Connection is not closed.");
+        assertTrue(con.isClosed(), TestResource.getResource("R_connectionIsNotClosed"));
     }
 
     @Test
     public void testIsWrapperFor() throws SQLException, ClassNotFoundException {
-        try(Connection conn = DriverManager.getConnection(connectionString);
-        		SQLServerConnection ssconn = (SQLServerConnection) conn) {
-	        boolean isWrapper;
-	        isWrapper = ssconn.isWrapperFor(ssconn.getClass());
-	        assertTrue(isWrapper, "SQLServerConnection supports unwrapping");
-	        assertEquals(ssconn.TRANSACTION_SNAPSHOT, ssconn.TRANSACTION_SNAPSHOT, "Cant access the TRANSACTION_SNAPSHOT ");
-	
-	        isWrapper = ssconn.isWrapperFor(Class.forName("com.microsoft.sqlserver.jdbc.ISQLServerConnection"));
-	        assertTrue(isWrapper, "ISQLServerConnection supports unwrapping");
-	        ISQLServerConnection iSql = (ISQLServerConnection) ssconn.unwrap(Class.forName("com.microsoft.sqlserver.jdbc.ISQLServerConnection"));
-	        assertEquals(iSql.TRANSACTION_SNAPSHOT, iSql.TRANSACTION_SNAPSHOT, "Cant access the TRANSACTION_SNAPSHOT ");
-	
-	        ssconn.unwrap(Class.forName("java.sql.Connection"));
+        try (Connection conn = DriverManager.getConnection(connectionString);
+                SQLServerConnection ssconn = (SQLServerConnection) conn) {
+            boolean isWrapper;
+            isWrapper = ssconn.isWrapperFor(ssconn.getClass());
+            MessageFormat form = new MessageFormat(TestResource.getResource("R_supportUnwrapping"));
+            Object[] msgArgs1 = {"SQLServerConnection"};
+
+            assertTrue(isWrapper, form.format(msgArgs1));
+            assertEquals(ssconn.TRANSACTION_SNAPSHOT, ssconn.TRANSACTION_SNAPSHOT,
+                    TestResource.getResource("R_cantAccessSnapshot"));
+
+            isWrapper = ssconn.isWrapperFor(Class.forName("com.microsoft.sqlserver.jdbc.ISQLServerConnection"));
+            Object[] msgArgs2 = {"ISQLServerConnection"};
+            assertTrue(isWrapper, form.format(msgArgs2));
+            ISQLServerConnection iSql = (ISQLServerConnection) ssconn
+                    .unwrap(Class.forName("com.microsoft.sqlserver.jdbc.ISQLServerConnection"));
+            assertEquals(iSql.TRANSACTION_SNAPSHOT, iSql.TRANSACTION_SNAPSHOT,
+                    TestResource.getResource("R_cantAccessSnapshot"));
+
+            ssconn.unwrap(Class.forName("java.sql.Connection"));
         }
     }
 
     @Test
     public void testNewConnection() throws SQLException {
-        try(SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString)) {
-        	assertTrue(conn.isValid(0), "Newly created connection should be valid");
+        try (SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString)) {
+            assertTrue(conn.isValid(0), TestResource.getResource("R_newConnectionShouldBeValid"));
         }
     }
 
@@ -270,95 +279,96 @@ public class ConnectionDriverTest extends AbstractTest {
     public void testClosedConnection() throws SQLException {
         SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString);
         conn.close();
-        assertTrue(!conn.isValid(0), "Closed connection should be invalid");
+        assertTrue(!conn.isValid(0), TestResource.getResource("R_closedConnectionShouldBeInvalid"));
     }
 
     @Test
     public void testNegativeTimeout() throws Exception {
         try (SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString)) {
-	        try {
-	            conn.isValid(-42);
-	            throw new Exception("No exception thrown with negative timeout");
-	        }
-	        catch (SQLException e) {
-	            assertEquals(e.getMessage(), "The query timeout value -42 is not valid.", "Wrong exception message");
-	        }
+            try {
+                conn.isValid(-42);
+                throw new Exception(TestResource.getResource("R_noExceptionNegativeTimeout"));
+            } catch (SQLException e) {
+                MessageFormat form = new MessageFormat(TestResource.getResource("R_invalidQueryTimeout"));
+                Object[] msgArgs = {"-42"};
+
+                assertEquals(e.getMessage(), form.format(msgArgs), TestResource.getResource("R_wrongExceptionMessage"));
+            }
         }
     }
 
     @Test
     public void testDeadConnection() throws SQLException {
-        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)), "Skipping test case on Azure SQL.");
+        assumeTrue(!DBConnection.isSqlAzure(DriverManager.getConnection(connectionString)),
+                TestResource.getResource("R_skipAzure"));
 
-        try (SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString + ";responseBuffering=adaptive")) {
-        	
-        	Statement stmt = null;
-	        String tableName = RandomUtil.getIdentifier("Table");
-	        tableName = DBTable.escapeIdentifier(tableName);
-	
-	        conn.setAutoCommit(false);
-	        stmt = conn.createStatement();
-	        stmt.executeUpdate("CREATE TABLE " + tableName + " (col1 int primary key)");
-	        for (int i = 0; i < 80; i++) {
-	            stmt.executeUpdate("INSERT INTO " + tableName + "(col1) values (" + i + ")");
-	        }
-	        conn.commit();
-	        try {
-	            stmt.execute("SELECT x1.col1 as foo, x2.col1 as bar, x1.col1 as eeep FROM " + tableName + " as x1, " + tableName
-	                    + " as x2; RAISERROR ('Oops', 21, 42) WITH LOG");
-	        }
-	        catch (SQLServerException e) {
-	            assertEquals(e.getMessage(), "Connection reset", "Unknown Exception");
-	        }
-	        finally {
-	            DriverManager.getConnection(connectionString).createStatement().execute("drop table " + tableName);
-	        }
-	        assertEquals(conn.isValid(5), false, "Dead connection should be invalid");
+        try (SQLServerConnection conn = (SQLServerConnection) DriverManager
+                .getConnection(connectionString + ";responseBuffering=adaptive")) {
+
+            Statement stmt = null;
+            String tableName = RandomUtil.getIdentifier("Table");
+            tableName = DBTable.escapeIdentifier(tableName);
+
+            conn.setAutoCommit(false);
+            stmt = conn.createStatement();
+            stmt.executeUpdate("CREATE TABLE " + tableName + " (col1 int primary key)");
+            for (int i = 0; i < 80; i++) {
+                stmt.executeUpdate("INSERT INTO " + tableName + "(col1) values (" + i + ")");
+            }
+            conn.commit();
+            try {
+                stmt.execute("SELECT x1.col1 as foo, x2.col1 as bar, x1.col1 as eeep FROM " + tableName + " as x1, "
+                        + tableName + " as x2; RAISERROR ('Oops', 21, 42) WITH LOG");
+            } catch (SQLException e) {
+                assertEquals(e.getMessage(), TestResource.getResource("R_connectionReset"),
+                        TestResource.getResource("R_unknownException"));
+            } finally {
+                DriverManager.getConnection(connectionString).createStatement().execute("drop table " + tableName);
+            }
+            assertEquals(conn.isValid(5), false, TestResource.getResource("R_deadConnection"));
         }
     }
 
     @Test
     public void testClientConnectionId() throws Exception {
         SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString);
-        assertTrue(conn.getClientConnectionId() != null, "ClientConnectionId is null");
+        assertTrue(conn.getClientConnectionId() != null, TestResource.getResource("R_clientConnectionIdNull"));
         conn.close();
         try {
             // Call getClientConnectionId on a closed connection, should raise exception
             conn.getClientConnectionId();
-            throw new Exception("No exception thrown calling getClientConnectionId on a closed connection");
-        }
-        catch (SQLServerException e) {
-            assertEquals(e.getMessage(), "The connection is closed.", "Wrong exception message");
+            throw new Exception(TestResource.getResource("R_noExceptionClosedConnection"));
+        } catch (SQLException e) {
+            assertEquals(e.getMessage(), TestResource.getResource("R_connectionIsClosed"),
+                    TestResource.getResource("R_wrongExceptionMessage"));
         }
 
         conn = null;
         try {
             // Wrong database, ClientConnectionId should be available in error message
-            conn = (SQLServerConnection) DriverManager
-                    .getConnection(connectionString + ";databaseName=" + RandomUtil.getIdentifierForDB("DataBase") + ";");
+            conn = (SQLServerConnection) DriverManager.getConnection(
+                    connectionString + ";databaseName=" + RandomUtil.getIdentifierForDB("DataBase") + ";");
             conn.close();
 
-        }
-        catch (SQLServerException e) {
+        } catch (SQLException e) {
             assertTrue(e.getMessage().indexOf("ClientConnectionId") != -1,
-                    "Unexpected: ClientConnectionId is not in exception message due to wrong DB");
+                    TestResource.getResource("R_unexpectedWrongDB"));
         }
 
         try {
             // Nonexist host, ClientConnectionId should not be available in error message
-            conn = (SQLServerConnection) DriverManager
-                    .getConnection(connectionString + ";instanceName=" + RandomUtil.getIdentifier("Instance") + ";logintimeout=5;");
+            conn = (SQLServerConnection) DriverManager.getConnection(
+                    connectionString + ";instanceName=" + RandomUtil.getIdentifier("Instance") + ";logintimeout=5;");
             conn.close();
 
-        }
-        catch (SQLServerException e) {
+        } catch (SQLException e) {
             assertEquals(false, e.getMessage().indexOf("ClientConnectionId") != -1,
-                    "Unexpected: ClientConnectionId is in exception message due to wrong host");
+                    TestResource.getResource("R_unexpectedWrongHost"));
         }
     }
 
     @Test
-    public void testIncorrectDatabase() throws SQLServerException {
+    public void testIncorrectDatabase() throws SQLException {
         long timerStart = 0;
         long timerEnd = 0;
         Connection con = null;
@@ -370,19 +380,21 @@ public class ConnectionDriverTest extends AbstractTest {
             ds.setDatabaseName(RandomUtil.getIdentifier("DataBase"));
             timerStart = System.currentTimeMillis();
             con = ds.getConnection();
-        }
-        catch (Exception e) {
-            assertTrue(e.getMessage().contains("Cannot open database"));
+        } catch (Exception e) {
+            assertTrue(e.getMessage().contains(TestResource.getResource("R_cannotOpenDatabase")));
             timerEnd = System.currentTimeMillis();
         }
 
         long timeDiff = timerEnd - timerStart;
-        assertTrue(con == null, "Should not have connected.");
-        assertTrue(timeDiff <= milsecs, "Exited in more than " + (milsecs / 1000) + " seconds.");
+        assertTrue(con == null, TestResource.getResource("R_shouldNotConnect"));
+
+        MessageFormat form = new MessageFormat(TestResource.getResource("R_exitedMoreSeconds"));
+        Object[] msgArgs = {milsecs / 1000};
+        assertTrue(timeDiff <= milsecs, form.format(msgArgs));
     }
 
     @Test
-    public void testIncorrectUserName() throws SQLServerException {
+    public void testIncorrectUserName() throws SQLException {
         long timerStart = 0;
         long timerEnd = 0;
         Connection con = null;
@@ -394,19 +406,20 @@ public class ConnectionDriverTest extends AbstractTest {
             ds.setUser(RandomUtil.getIdentifier("User"));
             timerStart = System.currentTimeMillis();
             con = ds.getConnection();
-        }
-        catch (Exception e) {
-            assertTrue(e.getMessage().contains("Login failed"));
+        } catch (Exception e) {
+            assertTrue(e.getMessage().contains(TestResource.getResource("R_loginFailed")));
             timerEnd = System.currentTimeMillis();
         }
 
         long timeDiff = timerEnd - timerStart;
-        assertTrue(con == null, "Should not have connected.");
-        assertTrue(timeDiff <= milsecs, "Exited in more than " + (milsecs / 1000) + " seconds.");
+        assertTrue(con == null, TestResource.getResource("R_shouldNotConnect"));
+        MessageFormat form = new MessageFormat(TestResource.getResource("R_exitedMoreSeconds"));
+        Object[] msgArgs = {milsecs / 1000};
+        assertTrue(timeDiff <= milsecs, form.format(msgArgs));
     }
 
     @Test
-    public void testIncorrectPassword() throws SQLServerException {
+    public void testIncorrectPassword() throws SQLException {
         long timerStart = 0;
         long timerEnd = 0;
         Connection con = null;
@@ -418,19 +431,20 @@ public class ConnectionDriverTest extends AbstractTest {
             ds.setPassword(RandomUtil.getIdentifier("Password"));
             timerStart = System.currentTimeMillis();
             con = ds.getConnection();
-        }
-        catch (Exception e) {
-            assertTrue(e.getMessage().contains("Login failed"));
+        } catch (Exception e) {
+            assertTrue(e.getMessage().contains(TestResource.getResource("R_loginFailed")));
             timerEnd = System.currentTimeMillis();
         }
 
         long timeDiff = timerEnd - timerStart;
-        assertTrue(con == null, "Should not have connected.");
-        assertTrue(timeDiff <= milsecs, "Exited in more than " + (milsecs / 1000) + " seconds.");
+        assertTrue(con == null, TestResource.getResource("R_shouldNotConnect"));
+        MessageFormat form = new MessageFormat(TestResource.getResource("R_exitedMoreSeconds"));
+        Object[] msgArgs = {milsecs / 1000};
+        assertTrue(timeDiff <= milsecs, form.format(msgArgs));
     }
 
     @Test
-    public void testInvalidCombination() throws SQLServerException {
+    public void testInvalidCombination() throws SQLException {
         long timerStart = 0;
         long timerEnd = 0;
         Connection con = null;
@@ -443,20 +457,21 @@ public class ConnectionDriverTest extends AbstractTest {
             ds.setFailoverPartner(RandomUtil.getIdentifier("FailoverPartner"));
             timerStart = System.currentTimeMillis();
             con = ds.getConnection();
-        }
-        catch (Exception e) {
-            assertTrue(e.getMessage().contains("Connecting to a mirrored"));
+        } catch (Exception e) {
+            assertTrue(e.getMessage().contains(TestResource.getResource("R_connectMirrored")));
             timerEnd = System.currentTimeMillis();
         }
 
         long timeDiff = timerEnd - timerStart;
-        assertTrue(con == null, "Should not have connected.");
-        assertTrue(timeDiff <= milsecs, "Exited in more than " + (milsecs / 1000) + " seconds.");
+        assertTrue(con == null, TestResource.getResource("R_shouldNotConnect"));
+        MessageFormat form = new MessageFormat(TestResource.getResource("R_exitedMoreSeconds"));
+        Object[] msgArgs = {milsecs / 1000};
+        assertTrue(timeDiff <= milsecs, form.format(msgArgs));
     }
 
     @Test
     @Tag("slow")
-    public void testIncorrectDatabaseWithFailoverPartner() throws SQLServerException {
+    public void testIncorrectDatabaseWithFailoverPartner() throws SQLException {
         long timerStart = 0;
         long timerEnd = 0;
         Connection con = null;
@@ -468,14 +483,15 @@ public class ConnectionDriverTest extends AbstractTest {
             ds.setFailoverPartner(RandomUtil.getIdentifier("FailoverPartner"));
             timerStart = System.currentTimeMillis();
             con = ds.getConnection();
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             timerEnd = System.currentTimeMillis();
         }
 
         long timeDiff = timerEnd - timerStart;
-        assertTrue(con == null, "Should not have connected.");
-        assertTrue(timeDiff >= ((loginTimeOutInSeconds - 1) * 1000), "Exited in less than " + (loginTimeOutInSeconds - 1) + " seconds.");
+        assertTrue(con == null, TestResource.getResource("R_shouldNotConnect"));
+        MessageFormat form = new MessageFormat(TestResource.getResource("R_exitedLessSeconds"));
+        Object[] msgArgs = {loginTimeOutInSeconds - 1};
+        assertTrue(timeDiff >= ((loginTimeOutInSeconds - 1) * 1000), form.format(msgArgs));
     }
 
     @Test
@@ -483,9 +499,8 @@ public class ConnectionDriverTest extends AbstractTest {
         SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString);
         try {
             conn.abort(null);
-        }
-        catch (SQLServerException e) {
-            assertTrue(e.getMessage().contains("The argument executor is not valid"));
+        } catch (SQLException e) {
+            assertTrue(e.getMessage().contains(TestResource.getResource("R_invalidArgumentExecutor")));
         }
     }
 
@@ -507,7 +522,7 @@ public class ConnectionDriverTest extends AbstractTest {
         SQLServerConnection conn = (SQLServerConnection) DriverManager.getConnection(connectionString);
         conn.getSchema();
     }
-    
+
     static Boolean isInterrupted = false;
 
     /**
@@ -528,8 +543,7 @@ public class ConnectionDriverTest extends AbstractTest {
 
                 try {
                     ds.getConnection();
-                }
-                catch (SQLException e) {
+                } catch (SQLException e) {
                     isInterrupted = Thread.currentThread().isInterrupted();
                 }
             }
@@ -547,6 +561,6 @@ public class ConnectionDriverTest extends AbstractTest {
 
         executor.shutdownNow();
 
-        assertTrue(isInterrupted, "Thread's interrupt status is not set.");
+        assertTrue(isInterrupted, TestResource.getResource("R_threadInterruptNotSet"));
     }
 }
